--- a/translations/kangyur/translations/043-008_toh71-suratas_questions.xml
+++ b/translations/kangyur/translations/043-008_toh71-suratas_questions.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">des pas zhus pa’i mdo</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Surataparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">Surata’s Questions</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa des pas zhus pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Surataparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">des pas zhus pa’i mdo</title>
+                <title type="mainTitle" xml:lang="bo">དེས་པས་ཞུས་པའི་མདོ།</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “Surata’s Questions”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryasurataparipṛcchānāmamahāyānasūtra</title>
-                <title type="mainTitle" xml:lang="bo">དེས་པས་ཞུས་པའི་མདོ།</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དེས་པས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa des pas zhus pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《善順所問經》（大正藏：《大寶積經善順菩薩會第二十七》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-34">Translated by the UCSB Translation Group 2<lb/> under the patronage and
                     supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-203">Jed Forman</author>
@@ -27,7 +28,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -61,8 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-02-28T12:20:21.569Z" user="admin">28/02/2022 12:20:21</note>
-
+                <note type="lastUpdated" date-time="2022-06-14T08:06:08.903Z" user="admin">14/06/2022 08:06:08</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-03-11T09:16:15.209Z" user="line-tofte">2.g</note>
@@ -101,7 +101,6 @@
                     version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-11-16T14:52:28.951Z" user="andre">Corrected Skt to:
                     anāthapiṇḍadasya ārāmaḥ</note>
-
                 <note type="updated" update="text-version" value="1.0.2" date-time="2022-01-13T19:47:54.069Z" user="celso">Added long english
                     title</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2022-02-28T12:20:17.437Z" user="laura">Corrections to i.9 from reader and John</note>
@@ -1594,12 +1593,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-043-008-250">
-                            <term>possesses the four dharmas</term>
-                            <term xml:lang="Bo-Ltn" status="verified">chos bzhi dang ldan </term>
-                            <term xml:lang="bo">ཆོས་བཞི་དང་ལྡན།</term>
+                        <gloss xml:id="UT22084-043-008-250" type="term" mode="match">
+                            <term>four dharmas</term>
+                            <term xml:lang="Bo-Ltn" status="verified">chos bzhi</term>
+                            <term xml:lang="bo">ཆོས་བཞི།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="alternative">possesses these four dharmas</term>
+                            <term type="alternative">four dharmas</term>
+                            <term type="definition">In this sūtra, these are taught as conviction, faith, regret, and reverence—whoever possesses these four will clearly see the Tathāgata.</term>
                         </gloss>
                     </item>
                     <item>
