--- a/translations/kangyur/placeholders/044-002_toh82-the_sutra_of_the_chapter_of_the_bodhisattva_jnanottaras_questions.xml
+++ b/translations/kangyur/placeholders/044-002_toh82-the_sutra_of_the_chapter_of_the_bodhisattva_jnanottaras_questions.xml
@@ -11,14 +11,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">jñānottara­bodhisattva­paripṛcchāparivarta</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvabuddha­mahārahasyopāyakośalya­jñānottarabodhisattva­paripṛcchāparivarta­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas thams cad kyi gsang chen thabs la mkhas pa/ byang chub sems dpa' ye shes dam pas zhus pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">(大正藏：大寶積經大乘方便會第三十八)</title>
-                <title type="otherTitle" xml:lang="zh">《智勝菩薩所問品》</title>
+                <title type="otherTitle" xml:lang="zh">《智勝菩薩所問品》(大正藏：大寶積經大乘方便會第三十八) </title>
                 <author role="translatorMain" ref="eft:team-40"/>
                 <author role="translatorEng" ref="eft:person-141">Charles Hastings</author>
                 <sponsor ref="sponsors.xml#sponsor-195">陳登修慈悲基金會，陳謝月娥，陳明傑，陳信宏，陳羽柔，嚴秀英，嚴金官闔家</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,11 +38,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-17T14:17:02.334Z" user="admin">17/01/2022 14:17:02</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-17T14:16:56.14Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-06-14T08:07:43.245Z" user="admin">14/06/2022 08:07:43</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-17T14:16:56.14Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
