--- a/translations/kangyur/translations/066-010_toh252-the_fourfold_accomplishment.xml
+++ b/translations/kangyur/translations/066-010_toh252-the_fourfold_accomplishment.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.4 <date>2022</date>
+                <edition>v 1.1.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -57,7 +57,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-02T19:28:10.485Z" user="admin">02/03/2022 19:28:10</note>
+                <note type="lastUpdated" date-time="2022-06-14T16:33:39.228Z" user="admin">14/06/2022 16:33:39</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-09-15T08:31:34.009Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="" date-time="2019-09-25T06:27:23.811Z" user="andreas">0.1 2019</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement
@@ -85,6 +85,7 @@
     <note type="updated" update="text-version" value="1.1.2" date-time="2021-10-29T16:27:45.235Z" user="john">Added a reference to Toh 177's parallel passage.</note>
     <note type="updated" update="text-version" value="1.1.3" date-time="2021-11-08T20:43:12.075Z" user="celso">fixed bad links</note>
     <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-02T19:28:06.333Z" user="celso">update cache for a note missing on distribution</note>
+    <note type="updated" update="text-version" value="1.1.5" date-time="2022-06-14T16:33:35.453Z" user="celso">Corrected a definition in glossary</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1145,7 +1146,7 @@
                             <term>Brahmā realm gods</term>
                             <term xml:lang="Bo-Ltn">tshangs pa’i ris kyi lha’i bu</term>
                             <term xml:lang="bo">ཚངས་པའི་རིས་ཀྱི་ལྷའི་བུ།</term>
-                            <term xml:lang="Sa-Ltn">brahmakākikeṣu devāḥ</term>
+                            <term xml:lang="Sa-Ltn">brahmakāyikadevaputra</term>
                             <term type="definition">A class of gods that reside in the Brahmā heavenly realms. </term>
                         </gloss>
                     </item>
@@ -1269,7 +1270,7 @@
                             <term xml:lang="Bo-Ltn">’dzam bu’i gling </term>
                             <term xml:lang="bo">འཛམ་བུའི་གླིང་།</term>
                             <term xml:lang="Sa-Ltn">Jambudvīpa</term>
-                            <term type="definition">The name of the southerns continent in śrāvaka the Buddhist cosmogram.</term>
+                            <term type="definition">The name of the southern continent in śrāvaka Buddhist cosmology.</term>
                         </gloss>
                     </item>
                     <item>
