--- a/translations/kangyur/translations/075-002_toh344-the_sutra_of_jnanaka.xml
+++ b/translations/kangyur/translations/075-002_toh344-the_sutra_of_jnanaka.xml
@@ -26,7 +26,7 @@
                 <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.01 <date>2022</date>
+                <edition>v 1.0.02 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1.a">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-15T12:41:55.007Z" user="admin">15/06/2022 12:41:55</note>
+                <note type="lastUpdated" date-time="2022-06-15T16:28:07.886Z" user="admin">15/06/2022 16:28:07</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:53:02.406Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:53:02.406Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:09:59.989Z" user="line-tofte">3</note>
@@ -97,7 +97,8 @@
                 <note type="updated" update="text-version" value="0.0.18" date-time="2022-06-13T11:39:55.956Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2022-06-14T18:01:27.676Z" user="andre">1.a</note>
                 <note type="updated" update="text-version" value="1.0.00" date-time="2022-06-14T18:01:27.676Z" user="andre">First published version</note>
-                <note type="updated" update="text-version" value="1.0.01" date-time="2022-06-15T12:41:51.214Z" user="konchog">One small fix, capitalizing "Pāriyātra tree".</note>
+                <note type="updated" update="text-version" value="1.0.01" date-time="2022-06-15T12:41:51.214Z" user="konchog">Several corrections added as per Konchog's remarks, and one small fix, capitalizing "Pāriyātra tree".</note>
+                <note type="updated" update="text-version" value="1.0.02" date-time="2022-06-15T16:28:04.042Z" user="john">Quote marks added where missing in 1.22, note 6 reformaulated slightly.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -322,7 +323,7 @@
                         present Blessed One.”</p>
                     <milestone unit="chunk" xml:id="UT22084-075-002-39"/>
                     <p tid="45">Aware of the intent of the child Jñānaka, the Blessed One smiled, <distinct>and so forth, up until</distinct> the light dissolved into the crown of his head.<note place="end" xml:id="UT22084-075-002-81">This refers to a stock phrase that normally reads in full (with some minor variations across texts): “The Blessed One then smiled, and as happens whenever the blessed ones smile, at that moment light of myriad colors—blue, yellow, red, white, crimson, crystalline, and silver—emerged from his mouth. The light illuminated boundless, limitless realms and reached all the way up to the world of Brahmā. It even eclipsed the magnificence of the sun and moon. Then the light rays returned, circled around the Blessed One three times, and dissolved into the crown of his head.” (See <ref target="https://read.84000.co/translation/UT22084-059-002.html#UT22084-059-002-304">
-                                <title xml:lang="en">The Questions of Brahmadatta</title>, Toh 159, 1.145</ref>.)</note> The venerable Ānanda saw this and thought to himself, “There is nothing that the Blessed One does without purpose, <distinct>and so forth, up until</distinct> what is the reason?<note place="end" xml:id="UT22084-075-002-84">Again, this refers to a stock phrase in which, with variations across texts, venerable Ānanda (or others in the Buddha's retinue) inquire as to the reason why the Buddha smiles. Usually the question is articulated to the Buddha, rather than here where Ānanda merely wonders in his thoughts. Commonly, the phrase is similar to this example: “At this point, Venerable Ānanda arose from his seat and, placing his robe over one shoulder, knelt on his right knee. With palms pressed together in the direction of the Blessed One, he spoke the following words to the Blessed One: ‘Blessed One, since the thus-gone, worthy, completely awakened buddhas do not smile without a cause, without a reason, what is the cause for your smile? What is the reason?’.” (See <ref target="https://read.84000.co/translation/UT22084-043-009.html#UT22084-043-009-139">
+                                <title xml:lang="en">The Questions of Brahmadatta</title>, Toh 159, 1.145</ref>.)</note> The venerable Ānanda saw this and thought to himself, “There is nothing that the Blessed One does without purpose,” <distinct>and so forth, up until</distinct> “What is the reason?”<note place="end" xml:id="UT22084-075-002-84">Again, this refers to a stock phrase in which the venerable Ānanda (or others in the Buddha’s retinue) inquire as to the reason why the Buddha smiles. Usually the question is articulated to the Buddha, rather than here where Ānanda merely wonders in his thoughts. Although there are all sorts of variant versions that differ in length and content, the following example is typical of shorter versions: “At this point, Venerable Ānanda arose from his seat and, placing his robe over one shoulder, knelt on his right knee. With palms pressed together in the direction of the Blessed One, he spoke the following words to the Blessed One: ‘Blessed One, since the thus-gone, worthy, completely awakened buddhas do not smile without a cause, without a reason, what is the cause for your smile? What is the reason?’.” (See <ref target="https://read.84000.co/translation/UT22084-043-009.html#UT22084-043-009-139">
                                 <title xml:lang="en">The Questions of the Householder Vīradatta</title>, Toh 72, 1.94</ref>.)</note>
                     </p>
                     <p tid="46">The Blessed One then addressed the venerable Ānanda with these verses:</p>
