--- a/translations/kangyur/placeholders/043-004_toh67-the_sutra_of_maitreyas_great_lions_roar.xml
+++ b/translations/kangyur/placeholders/043-004_toh67-the_sutra_of_maitreyas_great_lions_roar.xml
@@ -21,11 +21,11 @@
                 <sponsor ref="sponsors.xml#sponsor-194">Ting Xie, Guowen Xie, Xiangzhi Yu, Jiayu Xie</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-043-004"/>
                 <date/>
             </publicationStmt>
@@ -55,6 +55,8 @@
                 <note type="updated" update="text-version" value="0.1.6" date-time="2022-05-30T12:08:49.798Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-05-30T12:09:39.478Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2022-05-30T12:09:39.478Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-06-16T07:35:45.986Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2022-06-16T07:35:45.986Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
