--- a/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
@@ -12,10 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-274">Adam Krug</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-101-146"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-27T07:19:48.111Z" user="admin">27/04/2022 07:19:48</note>
+                <note type="lastUpdated" date-time="2022-06-16T10:18:00.832Z" user="admin">16/06/2022 10:18:00</note>
                 <note type="title" date-time="2022-04-10T08:20:16.785Z" user="john">Apart from the title, this text, written by Vararuci, is the same as the Mahākāladevīstotra aṣṭa in the Tengyur (Toh 1777).</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -39,6 +39,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-04-27T07:19:01.164Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-27T07:19:01.164Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-27T07:19:44.313Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-06-16T10:17:55.018Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-16T10:17:55.018Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
