--- a/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
+++ b/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
@@ -11,10 +11,10 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-100-022"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-13T12:55:28.794Z" user="admin">13/04/2022 12:55:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-06-16T10:30:51.557Z" user="admin">16/06/2022 10:30:51</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T10:30:43.83Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T10:30:43.83Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
