--- a/translations/kangyur/placeholders/093-017_toh702-the_lions_roar_tantra.xml
+++ b/translations/kangyur/placeholders/093-017_toh702-the_lions_roar_tantra.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-093-017"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-10T09:31:16.178Z" user="admin">10/05/2022 09:31:16</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-10T09:30:36.423Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-05-10T09:30:36.423Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-10T09:31:10.411Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-06-16T10:50:23.79Z" user="admin">16/06/2022 10:50:23</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-10T09:30:36.423Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-05-10T09:30:36.423Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-10T09:31:10.411Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T10:50:15.929Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T10:50:15.929Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
