--- a/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
+++ b/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
@@ -11,10 +11,10 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-100-018"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-13T12:54:33.905Z" user="admin">13/04/2022 12:54:33</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:04.983Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:04.983Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:54:30.205Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-06-16T10:58:39.953Z" user="admin">16/06/2022 10:58:39</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:04.983Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:04.983Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:54:30.205Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T10:58:32.254Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T10:58:32.254Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
