--- a/translations/kangyur/placeholders/015-002_toh8-2-chapters_7_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/015-002_toh8-2-chapters_7_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -4,13 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa/ \('bum/\)</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">śatasāhasrikāprajñāpāramitā</title>
                 <title type="mainTitle" xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines (Chapters 7–72)</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">śatasāhasrikāprajñāpāramitā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa/ \('bum/\)</title>
+                <title type="otherTitle" xml:lang="zh">《般若波羅蜜多十萬頌》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.3 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -21,7 +22,7 @@
                     <ref>Toh 8-2</ref>
                     <biblScope/>
                     <location work="UT4CZ5369" count-pages="8195">
-                        <volume number="15" start-page="441" end-page="803"/>
+                        <volume number="15" start-page="442" end-page="803"/>
                         <volume number="16" start-page="2" end-page="787"/>
                         <volume number="17" start-page="2" end-page="761"/>
                         <volume number="18" start-page="2" end-page="789"/>
@@ -44,8 +45,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-14T13:01:43.161Z" user="admin">14/04/2021 13:01:43</note>
+                <note type="lastUpdated" date-time="2022-06-16T16:14:42.595Z" user="admin">16/06/2022 16:14:42</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:55:36.252Z" user="john">Split from original single Toh 8 file</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T16:14:40.597Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
