--- a/translations/kangyur/translations/040-006_toh55-the_complete_effulgence_of_light_teaching.xml
+++ b/translations/kangyur/translations/040-006_toh55-the_complete_effulgence_of_light_teaching.xml
@@ -25,10 +25,11 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                 <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
                 <sponsor ref="sponsors.xml#sponsor-188">晓培</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2">
@@ -58,7 +59,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-07T14:41:26.546Z" user="admin">07/06/2022 14:41:26</note>
+                <note type="lastUpdated" date-time="2022-06-17T11:52:34.678Z" user="admin">17/06/2022 11:52:34</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:34.942Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-11-24T14:41:09.015Z" user="line-tofte">2.g</note>
@@ -83,6 +84,7 @@
                 <note type="updated" update="translation-status" value="2" date-time="2022-04-21T08:36:30.623Z" user="line-tofte">2</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-21T08:36:30.623Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-07T14:41:20.648Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-17T11:52:28.756Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
