--- a/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -15,9 +15,10 @@
                 <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
                 <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -37,11 +38,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-21T14:32:50.379Z" user="admin">21/06/2022 14:32:50</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-05-31T10:00:44.893Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-31T10:00:44.893Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-31T10:08:18.399Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-06-14T09:34:34.59Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-06-14T09:34:34.59Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-06-21T14:32:42.783Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-21T14:32:42.783Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-21T14:33:30.508Z" user="admin">21/06/2022 14:33:30</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-05-31T10:00:44.893Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-31T10:00:44.893Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-31T10:08:18.399Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-06-14T09:34:34.59Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-06-14T09:34:34.59Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-06-21T14:32:42.783Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-21T14:32:42.783Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-06-21T14:33:22.925Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
