--- a/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -15,9 +15,10 @@
                 <author role="translatorMain" ref="eft:team-70"/>
                 <author role="translatorEng" ref="eft:person-380">Julian Schott</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -45,25 +46,22 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-21T14:34:19.931Z" user="admin">21/06/2022 14:34:19</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-29T14:29:01.381Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-29T14:29:15.302Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-12-09T11:34:21.631Z" user="line-tofte">2.g</note>
-
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-12-09T11:34:21.631Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-03T14:31:14.761Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="translation-status" value="2.f" date-time="2022-02-04T12:53:58.542Z" user="line-tofte">2.f</note>
-
-    <note type="updated" update="text-version" value="0.0.7" date-time="2022-02-04T12:53:58.542Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2022-06-21T14:34:12.346Z" user="line-tofte">2.e</note>
-    <note type="updated" update="text-version" value="0.0.8" date-time="2022-06-21T14:34:12.346Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-06-21T14:34:53.443Z" user="admin">21/06/2022 14:34:53</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-29T14:29:01.381Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-29T14:29:15.302Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-12-09T11:34:21.631Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-12-09T11:34:21.631Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-03T14:31:14.761Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-02-04T12:53:58.542Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-02-04T12:53:58.542Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-06-21T14:34:12.346Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-06-21T14:34:12.346Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-06-21T14:34:45.797Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
