--- a/translations/kangyur/placeholders/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
+++ b/translations/kangyur/placeholders/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
@@ -17,10 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2021</date>
+                <edition>v 0.0.14 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-066-017"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-16T12:10:28.737Z" user="admin">16/06/2022 12:10:28</note>
+                <note type="lastUpdated" date-time="2022-06-23T12:08:59.39Z" user="admin">23/06/2022 12:08:59</note>
     <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">3</note>
@@ -48,7 +48,7 @@
     <note type="updated" update="text-version" value="0.0.7" date-time="2021-05-12T08:00:48.195Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-10-05T14:26:36.18Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.8" date-time="2021-10-05T14:26:36.18Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.9" date-time="2021-10-06T08:26:58.926Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-03-08T09:13:28.001Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.9" date-time="2021-10-06T08:26:58.926Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-03-08T09:13:28.001Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-06-23T12:08:51.814Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-23T12:08:51.814Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
