--- a/translations/kangyur/translations/064-001_toh231-the_jewel_cloud_sutra.xml
+++ b/translations/kangyur/translations/064-001_toh231-the_jewel_cloud_sutra.xml
@@ -34,7 +34,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E. Ho Gu, Likai Gu, Tiffany Tai, Lillian Gu, Jerry Yen, E. E. Ho, Minda and Miin Ho, Chung Da, and Beiying Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.30.15 <date>2022</date>
+                <edition>v 1.30.16 <date>2022</date>
                 </edition>
             </editionStmt>
 <publicationStmt status="1">
@@ -69,7 +69,7 @@
                 </bibl>
             </sourceDesc>
            <notesStmt>
-               <note type="lastUpdated" date-time="2022-03-15T19:48:40.448Z" user="admin">15/03/2022 19:48:40</note>
+               <note type="lastUpdated" date-time="2022-06-23T17:40:40.766Z" user="admin">23/06/2022 17:40:40</note>
             <note type="updated" update="text-version" value="v 1.22" date-time="2019-03-14T11:09:33.397Z" user="john">v 1.22 2019</note>
             <note type="updated" update="text-version" value="v 1.23" date-time="2019-03-16T12:08:02.666Z" user="john">v 1.23 2019</note>
             <note type="updated" update="text-version" value="v 1.25" date-time="2019-05-08T10:40:36.639Z" user="mike">v 1.25 2019</note>
@@ -96,6 +96,7 @@
     <note type="updated" update="text-version" value="1.30.13" date-time="2021-11-01T13:25:02.432Z" user="john">Added a note (60).</note>
     <note type="updated" update="text-version" value="1.30.14" date-time="2021-11-02T14:08:53.292Z" user="john">Updated references to uṣṇīṣa and invisible crown, and added a glossary entry.</note>
     <note type="updated" update="text-version" value="1.30.15" date-time="2022-03-15T19:48:36.435Z" user="laura">A couple of errors spotted by David Higgins</note>
+    <note type="updated" update="text-version" value="1.30.16" date-time="2022-06-23T17:40:36.828Z" user="john">Small corrections</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1653,9 +1654,9 @@
                         steadfastness through merit. Bodhisattvas gather numerous roots of virtue
                         within the Great Vehicle, and throughout their succession of different lives
                         bodhisattvas practice well and are cared for by spiritual teachers. Thus,
-                        wherever they may take birth among the great sāla trees of the brahmin
-                        caste, the great sāla trees of the royal caste, or the great sāla trees of
-                        the caste of householders, the people of their household will be faithful.
+                        wherever they may take birth among brahmin families like great sāla trees, 
+                        royal families like great sāla trees, or householder families like great sāla trees,
+                        the people of their household will be faithful.
                         Moreover, by the causes and conditions of the bodhisattvas’ birth there,
                         their faith will develop, grow, and expand further still. Bodhisattvas do
                         not separate from their spiritual teachers. Who are their spiritual
@@ -7786,13 +7787,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-064-001-838">
-                            <term>parivrājakas</term>
-                            <term xml:lang="Bo-Ltn">kun tu rgyu </term>
+                        <gloss xml:id="UT22084-064-001-838" type="term" mode="match">
+                            <term>parivrājaka</term>
+                            <term xml:lang="Bo-Ltn">kun tu rgyu</term>
                             <term xml:lang="bo">ཀུན་ཏུ་རྒྱུ།</term>
-                            <term xml:lang="Sa-Ltn">parivrājaka </term>
-                            <term type="definition">A non-Buddhist religious practitioner who has no
-                                fixed residence.</term>
+                            <term xml:lang="Sa-Ltn">parivrājaka</term>
+                            <term type="definition">A non-Buddhist religious practitioner who has no fixed residence.</term>
                         </gloss>
                     </item>
                     <item>
