--- a/translations/kangyur/translations/040-006_toh55-the_complete_effulgence_of_light_teaching.xml
+++ b/translations/kangyur/translations/040-006_toh55-the_complete_effulgence_of_light_teaching.xml
@@ -14,8 +14,7 @@
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ’od zer kun du bkye ba bstan pa zhes bya ba theg pa chen po’i mdo</title>
                 <title type="otherTitle" xml:lang="zh">(大正藏：大寶積經出現光明會第十一)</title>
                 <title type="otherTitle" xml:lang="zh">​​​​光明徧放經</title>
-                <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation Committee<lb/>under the patronage and supervision of 84000: Translating the Words of the
-                    Buddha</author>
+                <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation Committee<lb/>under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="eft:person-59">Benjamin Collet-Cassart</author>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
@@ -29,7 +28,7 @@
                 <sponsor ref="sponsors.xml#sponsor-188">晓培</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1.a">
@@ -59,7 +58,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-24T07:16:58.235Z" user="admin">24/06/2022 07:16:58</note>
+                <note type="lastUpdated" date-time="2022-06-24T07:21:56.843Z" user="admin">24/06/2022 07:21:56</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:34.942Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-11-24T14:41:09.015Z" user="line-tofte">2.g</note>
@@ -87,6 +86,7 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-17T11:52:28.756Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2022-06-24T07:16:50.481Z" user="andre">1.a</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-06-24T07:16:50.481Z" user="andre">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-24T07:21:52.956Z" user="andre">Glossary "excluded status" removed. Now active in CG.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -9721,7 +9721,7 @@
                     <bibl xml:id="UT22084-040-006-1608">Trungram Gyatrul Rinpoche Sherpa. “Gampopa, the Monk and the Yogi: His Life and Teachings.” PhD diss., Harvard University, 2004.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
 
                     <item>
