--- a/translations/kangyur/placeholders/072-002_toh302-the_sutra_of_cherishing_monks.xml
+++ b/translations/kangyur/placeholders/072-002_toh302-the_sutra_of_cherishing_monks.xml
@@ -22,10 +22,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2020</date>
+                <edition>v 0.0.15 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-072-002"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-02T13:07:44.668Z" user="admin">02/06/2022 13:07:44</note>
+                <note type="lastUpdated" date-time="2022-06-24T09:30:25.611Z" user="admin">24/06/2022 09:30:25</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:56:09.316Z" user="line-tofte">3</note>
@@ -53,7 +53,7 @@
     <note type="updated" update="text-version" value="0.0.6" date-time="2021-05-20T12:09:36.713Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="translation-status" value="2.g" date-time="2021-05-20T12:56:27.65Z" user="line-tofte">2.g</note>
     <note type="updated" update="text-version" value="0.0.7" date-time="2021-05-20T12:56:27.65Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.8" date-time="2021-05-20T12:57:06.44Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-11T14:23:37.47Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-11T14:23:37.47Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-05-09T09:01:24.074Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-09T09:01:24.074Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-05-09T09:02:31.714Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.c" date-time="2022-05-31T07:38:46.474Z" user="line-tofte">2.c</note>    <note type="updated" update="text-version" value="0.0.12" date-time="2022-05-31T07:38:46.474Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.b" date-time="2022-06-02T13:06:57.839Z" user="line-tofte">2.b</note>    <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-02T13:06:57.839Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-02T13:07:38.789Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.8" date-time="2021-05-20T12:57:06.44Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-11T14:23:37.47Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-11T14:23:37.47Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-05-09T09:01:24.074Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-09T09:01:24.074Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-05-09T09:02:31.714Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.c" date-time="2022-05-31T07:38:46.474Z" user="line-tofte">2.c</note>    <note type="updated" update="text-version" value="0.0.12" date-time="2022-05-31T07:38:46.474Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.b" date-time="2022-06-02T13:06:57.839Z" user="line-tofte">2.b</note>    <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-02T13:06:57.839Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-02T13:07:38.789Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.a" date-time="2022-06-24T09:30:18.029Z" user="line-tofte">2.a</note>    <note type="updated" update="text-version" value="0.0.15" date-time="2022-06-24T09:30:18.029Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
