--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -7,18 +7,16 @@
         <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual
           Manual</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­dhāraṇī kalpasahitā</title>
+        <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
           pa</title>
-        <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
         <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
           Dhāraṇī with Its Ritual Manual</title>
-        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Sarva­tathāgatoṣṇīṣavijayā­nāma­dhāraṇī
           kalpasahitā</title>
-        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
           par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
         <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -27,10 +25,11 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -66,18 +65,12 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-24T09:48:42.381Z" user="admin">24/06/2022 09:48:42</note>
-
+        <note type="lastUpdated" date-time="2022-06-24T09:50:01.828Z" user="admin">24/06/2022 09:50:01</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
-
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
-
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
-
         <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-16T08:21:21.001Z" user="line-tofte">Auto (update-contributors)</note>
-
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:21:48.121Z" user="line-tofte">3</note>
-
         <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-16T08:21:48.121Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-02-18T13:24:39.581Z" user="line-tofte">2.h</note>
@@ -102,8 +95,9 @@
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-03T08:47:57.967Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-03T08:48:32.113Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-06-24T09:48:34.74Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-24T09:48:34.74Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-06-24T09:48:34.74Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-24T09:48:34.74Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-24T09:49:54.256Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
