--- a/translations/kangyur/translations/091-072_toh674,849-the_aparimitayurjnana_sutra_1.xml
+++ b/translations/kangyur/translations/091-072_toh674,849-the_aparimitayurjnana_sutra_1.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.6 <date>2022</date>
+                <edition>v 1.1.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -75,7 +75,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-05T16:42:32.538Z" user="admin">05/06/2022 16:42:32</note>
+                <note type="lastUpdated" date-time="2022-06-27T13:57:09.439Z" user="admin">27/06/2022 13:57:09</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:24:26.507Z" user="mike">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2020-04-23T15:17:50.044Z" user="line-tofte">2.c</note>
@@ -117,6 +117,8 @@
                 <note type="updated" update="text-version" value="1.1.3" date-time="2021-09-23T20:22:24.052Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇī"</note>
                 <note type="updated" update="text-version" value="1.1.4" date-time="2022-01-06T20:30:56.309Z" user="celso">activated pending link</note>
                 <note type="updated" update="text-version" value="1.1.5" date-time="2022-05-13T17:20:02.255Z" user="martina-cotter">Added pending links.</note>
+                <note type="updated" update="text-version" value="1.1.7" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.1.8" date-time="2022-06-27T13:57:05.613Z" user="john">Typo corrected</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -246,7 +248,7 @@
                         hand was “Amitāyus of the zenith” (<foreign xml:lang="Bo-Ltn">steng phyogs kyi tshe dpag
                             med</foreign>) and “Amitāyus of Akaniṣṭha” (<foreign xml:lang="Bo-Ltn">’og min gyi tshe dpag
                             med</foreign>, in the tantras), both likely to be references to Aparimitāyur­jñāna. On the
-                        other was “Amitāyus of Sukhāvatī” (<foreign xml:lang="Bo-Ltn">de ba can gyi tshe dpag
+                        other was “Amitāyus of Sukhāvatī” (<foreign xml:lang="Bo-Ltn">bde ba can gyi tshe dpag
                             med</foreign>), also sometimes known as “Amitāyus of the Drum of Immortality” (<foreign xml:lang="Bo-Ltn">’chi med rnga sgra’i tshe dpag med</foreign>, Dundubhisvara-Amitāyus),
                         both of whom can be identified with Amitābha.<note place="end" xml:id="UT22084-091-072-18"> The
                             epithet Dundubhisvara is a particular feature of another Kangyur text, the 
